# polygonization-algorithms

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classSCALAR__POLYGONIZATION_1_1MarchingCubes.html  classSCALAR__POLYGONIZATION_1_1MarchingCubes.js  classSCALAR__POLYGONIZATION_1_1Triangle.html  classSCALAR__POLYGONIZATION_1_1Triangle.js  classSCALAR__POLYGONIZATION_1_1Vec3.html  classSCALAR__POLYGONIZATION_1_1Vec3.js  classSCALAR__POLYGONIZATION_1_1Vertex.html  classSCALAR__POLYGONIZATION_1_1Vertex.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  index.html  marching__cubes_8cc.html  marching__cubes_8cc_source.html  marching__cubes_8h.html  marching__cubes_8h.js  marching__cubes_8h_source.html  menudata.js  namespaceSCALAR__POLYGONIZATION.html  namespaceSCALAR__POLYGONIZATION.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  (+17 more)
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: index-sort-f.html  index-sort-l.html  index.html  marching_cubes.cc.func-sort-c.html  marching_cubes.cc.func.html  marching_cubes.cc.gcov.html  vec3.cc.func-sort-c.html  vec3.cc.func.html  vec3.cc.gcov.html
docs/: CMakeLists.txt  Doxyfile  doxygen.mk
docs/pages/: README.md
examples/: array.cc  array.h  grid.cc  grid.h  marching_cubes.cc  marching_cubes_rectangular_domain.cc  marching_cubes_rectangular_domain.h  mat3.cc  mat3.h
ext/: CMakeLists.txt
include/marching_cubes/: marching_cubes.h  tables.h  utilities.h  vec3.h
include/scalar_polygonization/: marching_cubes.h  tables.h  utilities.h  vec3.h
include/surface_polygonization/: marching_cubes.h  tables.h  utilities.h  vec3.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+3 more)
src/: marching_cubes.cc  vec3.cc
tests/: CMakeLists.txt  marching-cubes.cc  vec3.cc
