CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(polygonization_algorithms)

OPTION(BUILD_DOCUMENTATION "Build Documentation" OFF)
OPTION(BUILD_TESTS "Build Tests" ON)
OPTION(BUILD_COVERAGE "Create test coverage report" OFF)

MARK_AS_ADVANCED(BUILD_COVERAGE)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add external dependencies
ADD_SUBDIRECTORY(ext)

# Generate documentation
IF (BUILD_DOCUMENTATION)
  ADD_SUBDIRECTORY(docs)
ENDIF(BUILD_DOCUMENTATION)

IF (BUILD_TESTS)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBUILD_TESTS")
ENDIF()

IF (BUILD_COVERAGE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -DBUILD_COVERAGE")
ENDIF()

IF (BUILD_TESTS)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF()

FILE(GLOB_RECURSE MARCHING_CUBES_SRC
	src/*.cc
	)

SET(MARCHING_CUBES_INC "${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES(${MARCHING_CUBES_INC})

ADD_LIBRARY(marching_cubes SHARED ${MARCHING_CUBES_SRC})

FILE(GLOB_RECURSE MARCHING_CUBES_EXAMPLES_SRC examples/*.cc)
SET(MARCHING_CUBES_EXAMPLES_INC "${CMAKE_CURRENT_SOURCE_DIR}/examples")
INCLUDE_DIRECTORIES(${MARCHING_CUBES_EXAMPLES_INC})
ADD_EXECUTABLE(marching_cubes_examples examples/marching_cubes.cc ${MARCHING_CUBES_EXAMPLES_SRC})

TARGET_LINK_LIBRARIES(marching_cubes_examples PUBLIC marching_cubes)
INSTALL(TARGETS marching_cubes_examples DESTINATION .)
