CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT("Surface Polygonization" LANGUAGES C CXX)

SET(PROJECT_VERSION 0.9.0)

OPTION(SP_BUILD_EXAMPLES "Build Tests" ON)
OPTION(SP_BUILD_TESTS "Build Tests" ON)
OPTION(SP_BUILD_DOCUMENTATION "Build Documentation" OFF)
OPTION(SP_BUILD_COVERAGE "Create test coverage report" OFF)

MARK_AS_ADVANCED(SP_BUILD_COVERAGE)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add external dependencies
ADD_SUBDIRECTORY(ext)

# Generate documentation
IF (SP_BUILD_DOCUMENTATION)
  ADD_SUBDIRECTORY(docs)
ENDIF(SP_BUILD_DOCUMENTATION)

IF (SP_BUILD_TESTS)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSP_BUILD_TESTS")
ENDIF()

IF (SP_BUILD_COVERAGE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -DSP_BUILD_COVERAGE")
ENDIF()

IF (SP_BUILD_TESTS)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF()

FILE(GLOB_RECURSE SCALAR_POLYGONIZATION_SRC
  src/*.cc
  )

SET(SCALAR_POLYGONIZATION_INC "${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES(${SCALAR_POLYGONIZATION_INC})

ADD_LIBRARY(scalar_polygonization SHARED ${SCALAR_POLYGONIZATION_SRC})

IF (SP_BUILD_EXAMPLES)
  FILE(GLOB_RECURSE SCALAR_POLYGONIZATION_EXAMPLES_SRC examples/*.cc)
  SET(SCALAR_POLYGONIZATION_EXAMPLES_INC "${CMAKE_CURRENT_SOURCE_DIR}/examples")
  INCLUDE_DIRECTORIES(${SCALAR_POLYGONIZATION_EXAMPLES_INC})
  ADD_EXECUTABLE(scalar_polygonization_examples ${SCALAR_POLYGONIZATION_EXAMPLES_SRC})

  TARGET_LINK_LIBRARIES(scalar_polygonization_examples PUBLIC scalar_polygonization)
  INSTALL(TARGETS scalar_polygonization_examples DESTINATION .)
ENDIF ()
