FILE(GLOB FILES "*.cpp" "*.cc")

SET(TEST_NAME sp_unit_tests)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} TEST_FILE)
ADD_EXECUTABLE(${TEST_NAME} ${TEST_FILE})

SET_PROPERTY(TARGET ${TEST_NAME} PROPERTY CXX_STANDARD 11)

TARGET_INCLUDE_DIRECTORIES(${TEST_NAME}
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(${TEST_NAME}
  PUBLIC
    surface_polygonization
  PRIVATE
    gtest
    gtest_main
)

IF (SP_BUILD_COVERAGE)
    TARGET_COMPILE_OPTIONS(${TEST_NAME}
      PRIVATE
        -g -O0 -fprofile-arcs -ftest-coverage
      )
    TARGET_LINK_LIBRARIES(${TEST_NAME}
      PRIVATE
        -g -O0 -fprofile-arcs -ftest-coverage
      )
ENDIF (SP_BUILD_COVERAGE)

SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES FOLDER "Tests")

ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
